actually made it 1.8 compatible and set the version to 1.8